- Updated the design a bit
- The initramfs will now not only display /dev/sd? devices, but also /dev/vd? devices (In case you are making drives under KVM)
- Some of the "key_gpg" parts were broken. This has now been fixed.
- Fixed a bug where the decryption loop would only let you try twice rather than three times
- Improved the "decrypt_drives" algorithm
- Updated the USAGE file

5.1.0
---------
- All support not relating to ZFS or a Normal boot has been removed. There are better
  initramfs applications out there for those use cases (LVM, LVM on RAID, etc)
- Added a commented "dm-crypt" to the addons.py to facilitate the user to enable encryption
  support (when their encryption support is compiled as a module)
  rather than built into the kernel). 
- Improved comments in some places

5.0.0
---------
- The application has been refactored. Smaller, faster, and cleaner.
- The application has been relicensed back to the Mozilla Public License 2.0.
- Improved error checking
- Improved program flow
- Improved parameter passing
- Improved dependency detection
- Visual improvements, including the removal of unneeded messages
- Supports passing the init to launch with the "init" flag. Example: init=/sbin/blahblah

4.1.2
---------
- Relicensed to the more permissive, Apache License 2.0
- Changed interpreter from '#/usr/bin/env python' to '#/usr/bin/python3'.
  This is a symlink to the system's python 3.X interpreter. Thus even if the user has python 2.X
  set in 'eselect python list', the program will still work.

4.1.1
---------
- The application will now use the zpool.cache file that's on the system
  at the time of creation if it finds one.
- The hostid of the generating system will be stored in /etc/hostid on the
  initramfs.
- 'refresh' option has been added so that if your initramfs has a stale
  zpool.cache and you need to boot, you can use it to ignore that cachefile
  and automatically install a clean zpool.cache into your system.